--- a/portfolio_ideta/css/style.css
+++ b/portfolio_ideta/css/style.css
@@ -44,7 +44,7 @@
     bottom: -5%;
     transform-origin: 46% 53%;
     animation-delay: 0;
-    background-color: hsl(0, 89%, 78%);
+    background-color: #ec6c4e;
   }
 
   span:nth-child(1) {
@@ -54,7 +54,7 @@
     bottom: -2%;
     transform-origin: 47% 50%;
     animation-delay: -1s;
-    background-color: hsl(50, 49%, 69%);
+    background-color: #53c711;
   }
 
   span:nth-child(2) {
@@ -64,7 +64,7 @@
     bottom: -11%;
     transform-origin: 49% 53%;
     animation-delay: -1.5s;
-    background-color: hsl(98, 68%, 82%);
+    background-color: #e4a191;
   }
 
   span:nth-child(3) {
@@ -74,7 +74,7 @@
     bottom: -4%;
     transform-origin: 47% 52%;
     animation-delay: -2s;
-    background-color: hsl(150, 80%, 75%);
+    background-color: #e4a191;
   }
 
   span:nth-child(4) {
@@ -84,7 +84,7 @@
     bottom: -11%;
     transform-origin: 47% 52%;
     animation-delay: -2.5s;
-    background-color: hsl(200, 72%, 60%);
+    background-color: #ec6c4e;
   }
 
   span:nth-child(5) {
@@ -94,7 +94,7 @@
     bottom: -9%;
     transform-origin: 48% 51%;
     animation-delay: -3s;
-    background-color: hsl(250, 54%, 70%);
+    background-color: #ecd94e;
   }
 
   span:nth-child(6) {
@@ -185,13 +185,17 @@
   width: 100vw;
   align-items: center;
   justify-content: center;
-  background-image: url(../images/FV_img.png);
+  background-image: url(../images/FV_img_1@2x.png);
   background-size: 345px;
   background-position: 16% 85%;
   background-repeat: no-repeat;
 }
 
-h1 {
+.fv .wrapper {
+  position: relative;
+}
+
+.fv p {
   font-family: fot-tsukuardgothic-std, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -200,19 +204,34 @@ h1 {
   margin: 66px auto auto 0px;
 }
 
-.fv > div > div {
-  width: 260px;
-  height: 30px;
+.fv_line {
+  width: 180px;
+  border-bottom: 1px solid #ec6c4e;
+  position: absolute;
+  top: 199px;
+  right: 400px;
+  z-index: 40;
+}
+
+.sp_fv_line_top,
+.sp_fv_line_bottom {
+  display: none;
+}
+
+.fv > div > div:nth-of-type(4) {
+  /* width: 260px; */
+  /* height: 30px; */
   margin: 34px auto auto 56%;
   z-index: 400;
 }
 
-.fv p {
+h1 {
   font-family: din-2014, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
   letter-spacing: 0.46em;
+  color: #ec6c4e;
   padding-left: 25px;
 }
 
@@ -220,12 +239,17 @@ h1 {
   .fv {
     background-size: 30%;
   }
-  h1 {
+
+  .fv_line {
+    right: 200px;
+  }
+
+  .fv p {
     font-size: 33px;
     margin-top: 106px;
   }
 
-  .fv p {
+  h1 {
     font-size: 14px;
   }
 }
@@ -235,7 +259,7 @@ h1 {
     background-image: none;
   }
 
-  h1 {
+  .fv p {
     font-size: 31px;
     writing-mode: vertical-rl;
     letter-spacing: 0.4em;
@@ -246,18 +270,115 @@ h1 {
     margin: 161px auto 0px auto;
   }
 
-  .fv > div > div {
-    width: 289px;
-    height: 453px;
-    margin: -363px auto 0px -226%;
-    border: 1px solid #ec6c4e;
+  .fv_line {
+    width: 1px;
+    height: 68px;
+    border-left: 1px solid #ec6c4e;
+    border-bottom: none;
+    top: 336px;
+    right: 183px;
   }
 
-  .fv p {
+  .sp_fv_line_top {
+    display: block;
+    width: 55px;
+    height: 62px;
+    border-top: 1px solid #ec6c4e;
+    border-left: 1px solid #ec6c4e;
+    position: absolute;
+    top: 90px;
+    right: 129px;
+  }
+
+  .sp_fv_line_bottom {
+    display: block;
+    width: 200px;
+    height: 100px;
+    border-right: 1px solid #ec6c4e;
+    border-bottom: 1px solid #ec6c4e;
+    position: absolute;
+    top: 439px;
+    left: -15px;
+  }
+
+  /*Scrollテキストの描写*/
+  .sp_fv_line_bottom span {
+    /*描画位置*/
+    position: absolute;
+    left: 210px;
+    bottom: 9px;
+    /*テキストの形状*/
+    color: #ec6c4e;
+    font-size: 12px;
+    letter-spacing: 0.46em;
+    /*縦書き設定*/
+    -ms-writing-mode: tb-rl;
+    -webkit-writing-mode: vertical-rl;
+    writing-mode: vertical-rl;
+  }
+
+  /* 丸の描写 */
+  .sp_fv_line_bottom:before {
+    content: "";
+    /*描画位置*/
+    position: absolute;
+    bottom: 0;
+    left: 194px;
+    /*丸の形状*/
+    width: 10px;
+    height: 10px;
+    border: 1px solid #ec6c4e;
+    border-radius: 50%;
+    /* background: #423732; */
+    /*丸の動き1.6秒かけて透過し、永遠にループ*/
+    animation: circlemove 2.6s ease-in-out infinite,
+      cirlemovehide 2.6s ease-out infinite;
+  }
+
+  /*下からの距離が変化して丸の全体が上から下に動く*/
+  @keyframes circlemove {
+    0% {
+      bottom: 90px;
+      /* bottom: 45px; */
+    }
+    100% {
+      bottom: -5px;
+    }
+  }
+
+  /*上から下にかけて丸が透過→不透明→透過する*/
+  @keyframes cirlemovehide {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    80% {
+      opacity: 0.9;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
+  .fv > div > div:nth-of-type(4) {
+    /* width: 289px; */
+    /* height: 453px; */
+    margin: 0px auto 0px 0px;
+    /* border: 1px solid #ec6c4e; */
+    position: absolute;
+    top: 168px;
+    right: 176px;
+  }
+
+  h1 {
     font-size: 12px;
     letter-spacing: 0.46em;
     writing-mode: vertical-rl;
-    height: 121px;
+    color: #ec6c4e;
+    height: 161px;
+    padding-left: 0;
   }
 }
 
@@ -326,12 +447,13 @@ h2 {
   width: auto;
   border-bottom: 1px solid #ec6c4e;
   position: absolute;
-  top: 203px;
+  top: 199px;
   right: 40px;
   z-index: 40;
 }
 
 .about_content {
+  display: flex;
   width: 666px;
   position: relative;
 }
@@ -345,6 +467,7 @@ h2 {
 
 .about_content .img img {
   height: 400px;
+  border-radius: 51% 48% 53% 47% / 47% 60% 45% 49%;
   object-fit: contain;
   z-index: 10;
 }
@@ -394,18 +517,28 @@ h2 {
   }
 
   .about .ttl {
-    margin-right: 2%;
-    margin-left: 8%;
+    margin-right: 0;
+    /* margin-left: 8%; */
   }
+
+  /* .about_line {
+    top: 90px;
+    right: 167px;
+  } */
 
   .about_content > div:nth-child(3) {
     left: 240px;
+    margin-top: 35px;
   }
 
   .txt_bg {
     width: 274px;
     height: 257px;
     border-radius: 41% 59% 46% 61% / 46% 53% 47% 54%;
+  }
+
+  .txt_bg div {
+    margin-top: 20px;
   }
 
   .about_content .txt {
@@ -415,12 +548,14 @@ h2 {
   }
 
   .about a {
+    top: 242px;
     left: 140px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .about {
+    width: 110vw;
     background-image: none;
   }
 
@@ -441,13 +576,19 @@ h2 {
 
   .about .ttl p {
     top: 47px;
-    left: -79px;
+    left: -64px;
+    /* left: -79px; */
   }
 
-  .about .ttl_line {
+  .erase {
+    display: none;
+  }
+
+  .about_line {
     width: 197%;
     top: 90px;
-    left: -312px;
+    right: 170px;
+    /* left: -312px; */
   }
 
   .about_content {
@@ -455,12 +596,13 @@ h2 {
   }
 
   .about_content > div:nth-child(3) {
+    margin-top: 0;
     top: 300px;
-    left: 0px;
+    left: 39px;
   }
 
   .about_content .img img {
-    height: 292px;
+    height: 276px;
   }
 
   .about_content .sp_img {
@@ -478,9 +620,13 @@ h2 {
     background-color: transparent;
   }
 
+  /* .about .txt {
+    padding-left: 26px;
+  } */
+
   .about a {
-    top: -39px;
-    left: 169px;
+    top: -90px;
+    left: 150px;
   }
 }
 
@@ -505,7 +651,8 @@ h2 {
   border-bottom: 1px solid #ec6c4e;
   position: absolute;
   top: 200px;
-  left: -470%;
+  right: 27px;
+  /* left: -470%; */
 }
 
 h3 {
@@ -536,10 +683,16 @@ h3 {
     flex-direction: column;
   }
 
+  .works .ttl p {
+    top: 47px;
+    left: -33px;
+    /* left: -47px; */
+  }
+
   .works_line {
     width: 196%;
     top: 90px;
-    left: -218%;
+    right: 160px;
   }
 }
 
@@ -645,8 +798,9 @@ h3 {
   }
 
   .first_contents {
-    background-size: 29%;
-    background-position: 12% 90%;
+    width: 110vw;
+    background-size: 140px;
+    background-position: 5% 91%;
   }
 
   .works .ttl {
@@ -688,7 +842,7 @@ h3 {
     width: 105px;
     height: 105px;
     top: 287px;
-    right: -175px;
+    left: 203px;
   }
 }
 
@@ -759,10 +913,10 @@ h3 {
     margin-left: 9%;
   }
 
-  .lp_square h3 {
+  /* .lp_square h3 {
     width: 600px;
     left: -87%;
-  }
+  } */
 }
 
 @media screen and (max-width: 767px) {
@@ -772,21 +926,24 @@ h3 {
   }
 
   .second_contents {
-    background-size: 29%;
-    background-position: 12% 90%;
+    width: 110vw;
+    background-size: 140px;
+    background-position: 5% 91%;
   }
 
   .lp_square {
     width: 173px;
     height: 10px;
     background-color: transparent;
-    margin: 65px 150px 100px;
+    /* margin: 65px 150px 100px; */
+    margin: 65px auto;
   }
 
   .lp_square h3 {
     padding-right: 25px;
     top: 348px;
-    left: -242%;
+    /* left: -242%; */
+    right: -34px;
   }
 
   .lp .sp_ttl_line {
@@ -797,7 +954,7 @@ h3 {
     transform: rotate(-45deg);
     position: absolute;
     top: 375px;
-    left: 190px;
+    left: 180px;
   }
 
   .lp_img {
@@ -841,7 +998,8 @@ h3 {
   width: 420px;
   position: absolute;
   top: 207px;
-  left: -75%;
+  /* left: -75%; */
+  right: 297px;
   border-bottom: solid 1px #ec6c4e;
   z-index: 300;
 }
@@ -886,8 +1044,9 @@ h3 {
 
 @media screen and (max-width: 767px) {
   .third_contents {
-    background-size: 29%;
-    background-position: 12% 90%;
+    width: 110vw;
+    background-size: 140px;
+    background-position: 5% 91%;
   }
 
   .bn {
@@ -904,7 +1063,8 @@ h3 {
   .bn_square h3 {
     width: 420px;
     top: 233px;
-    left: -115%;
+    right: 27px;
+    /* left: -115%; */
   }
 
   .bn_square .sp_ttl_line {
@@ -915,7 +1075,7 @@ h3 {
     transform: rotate(-45deg);
     position: absolute;
     top: 260px;
-    left: 179px;
+    left: 164px;
   }
 
   .bn_img {
@@ -927,8 +1087,8 @@ h3 {
 
   .bn_square a {
     display: inline-block;
-    width: 120px;
-    height: 120px;
+    width: 105px;
+    height: 105px;
     position: relative;
     top: 285px;
     right: -140px;
@@ -958,12 +1118,18 @@ h3 {
   justify-content: center;
 }
 
+.contact .cursive {
+  top: 183px;
+  left: 33px;
+}
+
 .contact_line {
   width: 460px;
   border-bottom: 1px solid #ec6c4e;
   position: absolute;
   top: 200px;
-  left: -440px;
+  right: 30px;
+  /* left: -440px; */
 }
 
 .contact .ttl {
@@ -1022,6 +1188,10 @@ textarea {
   top: 280px;
 }
 
+.sp-copy {
+  display: none;
+}
+
 @media screen and (max-width: 1100px) {
   .contact {
     background-size: 20%;
@@ -1050,12 +1220,17 @@ textarea {
 
 @media screen and (max-width: 767px) {
   .contact {
-    background-size: 99%;
-    background-position: 12% 90%;
+    background-size: 20%;
+    background-position: 0% 92%, 100% 92%;
   }
 
   .contact .wrapper {
     display: flex;
+  }
+
+  .contact .cursive {
+    top: 47px;
+    left: -47px;
   }
 
   .contact_line {
@@ -1063,7 +1238,8 @@ textarea {
     border-bottom: 1px solid #ec6c4e;
     position: absolute;
     top: 90px;
-    left: -470px;
+    /* left: -470px; */
+    right: 170px;
   }
 
   .contact .ttl {
@@ -1075,7 +1251,7 @@ textarea {
   }
 
   .contact .txt p {
-    font-size: 13px;
+    font-size: 12px;
     line-height: 1.4;
     letter-spacing: 0.09em;
     writing-mode: horizontal-tb;
@@ -1093,12 +1269,14 @@ textarea {
     height: 300px;
     margin-bottom: 0px;
     padding-right: 0%;
+    margin-top: 10px;
   }
 
   th {
     display: block;
     text-align: left;
     width: 20%;
+    padding-top: 0;
   }
 
   td {
@@ -1119,7 +1297,7 @@ textarea {
 
   .submit {
     color: #fff;
-    width: 60.5vw;
+    width: 49.5vw;
     min-width: 282px;
 
     height: 38px;
@@ -1130,5 +1308,14 @@ textarea {
     /* position: absolute; */
     top: 345px;
     left: 2px;
+  }
+
+  .pc-copy {
+    display: none;
+  }
+
+  .sp-copy {
+    display: flex;
+    bottom: 41px;
   }
 }
